# computervision-practice

./: .gitignore  VIO.code-workspace
dataset/: README.md
src/: CMakeLists.txt  HoughLines.cpp  Odometry.cpp  StreamReader.cpp  main.cc
src/includes/: HoughLines.hpp  Odometry.hpp  StreamReader.hpp
src/lib/libviso2/: CMakeLists.txt
test/: .gitignore
test/CSV_Parser/: CSVParser.h  main.cpp
test/Camera_Calibration/: main - Copy.cpp  main.cpp
test/Create_Movie/: main.cpp
test/Depth_from_stereo/: main.cpp
test/Harris_Corner_Movie/: main.cpp
test/Harris_corner/: main.cpp
test/ORB_Movie/: main.cpp
test/ORB_Rectify_Movie/: main.cpp
test/Stereo_rectify/: main.cpp
test/Stereo_rectify/python/: visualizePCL.py
